# GasGuardianControl

esp32/: ApiServer.cpp  ApiServer.h  CMakeLists.txt  DisplayDriver.cppDisplayDriver.cpp  DisplayDriver.h  DisplayManager.cpp  DisplayManager.h  EspNowReceiver.cpp  EspNowReceiver.h  GasManager.cpp  GasManager.h  SystemController.cpp  SystemController.h  esp32.ino  filelist.txt  ui.c  ui.h  ui_Screen1.c  ui_Screen2.c  ui_comp_hook.c  ui_font_light10.c  ui_helpers.h  ui_img_1429767708.c  ui_img_admirador_png.c  ui_img_base2_png.c
esp32/ui/: CMakeLists.txt  filelist.txt  ui.c  ui.h  ui_Screen1.c  ui_Screen1.h  ui_Screen2.h  ui_events.h  ui_font_normal.c  ui_font_normal10.c  ui_font_normal12.c  ui_font_normal26.c  ui_helpers.c  ui_img_base_png.c  ui_img_basecarga_png.c
esp_gas/: EspNowSender.cpp  EspNowSender.h  GasSensor.cpp  GasSensor.h  esp_gas.ino
